<resources>
    <string name="app_name">Gutib,Junas Nazarito - Activity 6 - Dialog Explorer</string>
    <string name="various_types_of_dialogs">Types of Dialogs</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title">Welcome to My Application</string>
    <string name="proceed">Proceed</string>
</resources>